# practice_ws

./: .gitattributes  README.md
doc/: setup.md  slam轨迹和机械臂轨迹协同标定.md  unitree.md  机械臂.md  机械臂建图.md
jaka/control_msgs/: CMakeLists.txt  package.xml
jaka/control_msgs/launch/: server.launch
jaka/control_msgs/src/: jaka5_server.cpp
jaka/control_msgs/srv/: MovejCallbackService.srv
jaka/handeye-calib/: .gitignore  LICENSE  README.md
jaka/handeye-calib/src/: online_handeye_result_2023_11_02_14_33_05.txt
jaka/handeye-calib/src/handeye-calib/config/: base_hand_to_eye_test_data.csv
jaka/handeye-calib/src/handeye-calib/config/result/: base_hand_on_eye_result.txt  base_hand_to_eye_result.txt
jaka/handeye-calib/src/handeye-calib/launch/aruco/: aruco_double.launch  aruco_single.launch  aruco_start_realsense_sdk.launch  aruco_start_usb_cam.launch  start_realsense_sdk.launch
jaka/handeye-calib/src/handeye-calib/launch/online/: arm2pose.launch  online_hand_on_eye_auto_cap.launch  online_hand_on_eye_calib.launch  online_hand_to_eye_calib copy.launch
jaka/handeye-calib/src/handeye-calib/launch/test/: test_hand_on_eye_calib.launch  test_hand_to_eye_calib.launch
jaka/handeye-calib/src/handeye-calib/src/examples/: examples.cpp
jaka/handeye-calib/src/handeye-calib/src/handeye/: base_hand_on_eye_calib.py  base_hand_to_eye_calib.py  file_operate.py  handeye_calibration_backend_opencv.py  online_hand_on_eye_calib.py  online_hand_on_eye_calib_auto.py  online_hand_on_eye_calib_cap.py  online_hand_to_eye_calib.py  tf_to_pose.py
jaka/handeye-calib/src/handeye-calib/src/test/: test_hand_on_eye.py  test_hand_to_eye.py
jaka/jaka5/: CMakeLists.txt  package.xml
jaka/jaka5/launch/: display.launch  gazebo.launch
jaka/jaka5/meshes/: Link_0.STL  Link_1.STL  Link_2.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL
jaka/jaka5/urdf/: jaka5.csv  jaka5.urdf  jaka5（复件）.urdf
jaka/jaka5_config/: .setup_assistant  CMakeLists.txt  package.xml
jaka/jaka5_config/config/: controllers.yaml  gazebo_jaka5.urdf  jaka5.srdf  joint_limits.yaml  ompl_planning.yaml
jaka/jaka5_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  jaka5_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
jaka/jaka_control/: CMakeLists.txt  package.xml
jaka/jaka_control/launch/: calib_test.launch  calib_test_qua.launch  home.launch  inter.launch  mapping.launch  moveit.launch  show.launch  start.launch  test.launch
jaka/jaka_control/libs/: conversion.h
jaka/jaka_control/scripts/: qua2ax.py
jaka/jaka_control/src/: calc.cpp  calib.cpp  calib_auto.cpp  calib_old.cpp  calib_test copy.cpp  calib_test.cpp  calib_test_old.cpp  calib_test_qua.cpp  client.cpp  focus.cpp  home.cpp  inter.cpp  mapping.cpp  moveit.cpp  show.cpp  test.cpp
jaka/jaka_description/: CMakeLists.txt  package.xml
jaka/jaka_description/config/: jaka_minicobo_urdf.rviz  jaka_zu18_urdf.rviz  jaka_zu3_urdf.rviz  jaka_zu5_urdf.rviz  jaka_zu7_urdf.rviz
jaka/jaka_description/launch/: jaka_pro16_rviz_control.launch  jaka_pro7_rviz_control.launch  test.launch
jaka/jaka_description/urdf/: jaka_minicobo.urdf  jaka_zu3.urdf  jaka_zu5.urdf  jaka_zu7.urdf
jaka/jaka_ros_driver_cpp/src/jaka_jog_panel/include/jaka_jog_panel/: main_window.hpp
jaka/jaka_ros_driver_cpp/src/jaka_jog_panel/ui/: main_window.ui
jaka/jaka_ros_driver_cpp/src/jaka_ros_driver/launch/: start.launch
jaka/jaka_ros_driver_cpp/src/jaka_ros_driver/src/: connect_robot.cpp
jaka/jaka_ros_driver_cpp/src/jaka_ros_driver/src/node_test/: disconnect_robot.cpp
jaka/jaka_ros_driver_cpp/src/jaka_rviz/launch/: jaka_zu12_rviz_control.launch  jaka_zu18_rviz_control.launch  jaka_zu3_rviz_control.launch  jaka_zu7_rviz_control.launch
jaka/jaka_ros_driver_cpp/src/jaka_rviz/urdf/: jaka_zu12.urdf  jaka_zu18.urdf  jaka_zu3.urdf  jaka_zu7.urdf
jaka/jaka_ros_driver_cpp/src/robot_msgs/msg/: RobotMsg.msg
jaka/jaka_ros_driver_cpp/src/robot_msgs/srv/: ClearErr.srv  Move.srv  SetLoad.srv  SetTcp.srv  SetUserFrame.srv
planner/ego-planner/src/planner/plan_manage/launch/: default.rviz  simple_run_vins.launch
realsense-ros/realsense2_camera/launch/: rs_camera_d435i.launch  rs_camera_d455.launch
slam/VINS-Fusion/config/: vins_rviz_config.rviz
slam/VINS-Fusion/config/euroc/: d435i.yaml  right.yaml
slam/VINS-Fusion/config/realsense_d435i/: realsense_stereo_imu_config.yaml
slam/pc/: CMakeLists.txt  package.xml
slam/pc/launch/: pcd2oct.launch  ply2pcd.launch
slam/pc/src/: pcd2oct.cpp  ply2pcd.cpp
slam/rtabmap/rtabmap_ros/rtabmap_util/src/: MapsManager.cpp
tracker/tracker_kcf_ros/: tracker_kcf_ros.code-workspace
tracker/tracker_kcf_ros/devel/: .catkin  local_setup.sh  setup.sh
tracker_kcf_ros/devel/lib/pkgconfig/: track_pkg.pc
tracker_kcf_ros/devel/lib/track_pkg/: kcf_node
tracker_kcf_ros/devel/share/track_pkg/cmake/: track_pkgConfig.cmake
tracker_kcf_ros/src/track_pkg/src/: runtracker.cpp
